# CRM-Camisas-do-brasil

./: .gitignore  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  customers.py  dashboard.py  kanban.py  orders.py  products.py
backend/app/db/: supabase.py
backend/app/schemas/: customer.py  kanban.py  order.py  product.py
backend/scripts/: add_order_lists.sql  seed_supabase.py
db/: migrate_supabase.sql
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  index.js  lists.js  login.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: 6f3be47f6517e754.webpack.hot-update.json  webpack.0666dbe2193271e9.hot-update.js  webpack.1e99b93259c08fc7.hot-update.js  (+8 more)
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: supabase-browser.ts  supabase.ts  withAuth.ts
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
frontend/src/styles/: globals.css
frontend/src/types/: global.d.ts  index.ts
frontend/src/utils/: api.ts
(+58 files in other folders)
